# proyecto-elecciones-diputados

./: .gitignore  CMakeLists.txt  Candidato.cpp  Candidato.h  Inscripcion.cpp  Inscripcion.h  README.md  main.cpp
Libreria/: Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  Pila.h
